# art-generator

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  pyproject.web.toml
.github/workflows/: pages.yml
art_generator/: __init__.py  main.py
art_generator/core/: animation.py  background.py  blend.py  engine.py  genome.py  rng.py
art_generator/equations/: attractors.py  base.py  complex_map.py  fractal.py  parametric.py  particles.py  polar.py  registry.py  vector_field.py
art_generator/examples/: __init__.py  generate_gallery.py
art_generator/exporters/: animation.py  genome_io.py  image.py  resolution.py  vector.py
art_generator/generators/: genome_generator.py  navigation.py  quality.py  recover.py
art_generator/noise/: __init__.py  fields.py
art_generator/palettes/: procedural.py
art_generator/presets/: abstract_purple_particle_mandala.json  library.py  mandala_kaleidoscope.json  parametric_flow.json  rosace_polaire.json  (+1 more)
art_generator/ui/: __init__.py  (+4 more)
docs/: index.html  style.css
public/: app.js  engine.py  style.css
scripts/: build_web.py
tests/: test_anim_options.py  test_animation.py  test_animation_export.py  test_color_source.py  test_composition.py  test_engine.py  test_export.py  test_gallery.py  test_harmony.py  test_noise_3d.py  test_noise_equations.py  test_noise_palettes.py  test_param_form.py  test_particles.py  test_particles_reveal.py  test_phase2.py  test_phase2plus.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_quality.py  test_recover.py  test_ui_workflow.py  test_web.py  test_web_ui.py
(+3 files in other folders)
