[project]
name = "art-generator"
version = "0.1.0"
description = "Moteur d'art generatif base sur des equations parametriques."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
art-generator = "art_generator.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["art_generator*"]

[tool.setuptools.package-data]
art_generator = ["presets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
